fix: don't use overflow-x

--- a/packages/subnav/style.module.css
+++ b/packages/subnav/style.module.css
@@ -7,8 +7,12 @@
   background: var(--background-color); /* from theme.module.css */
   border-top: 1px solid var(--border-color); /* from theme.module.css */
   border-bottom: 1px solid transparent;
-  overflow-x: hidden;
+  overflow: hidden;
   transition: border-bottom-color 0.8s;
+
+  &.hasOverflow {
+    overflow: visible;
+  }
 
   &.isSticky {
     border-bottom-color: var(--border-color); /* from theme.module.css */
